# BioEncoder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  interactive_plots.py  learning_rate_finder.py  model_explorer.py  plot.html  pyproject.toml  requirements.txt  split_dataset.py  swa.py  train.py  vis_examples.ipynb
.github/: copilot-instructions.md
assets/: multi_gpu_cluster_implementation_plan.md
bioencoder/: __init__.py  config.py  datasets.py  utils.py
bioencoder/core/: __init__.py  augmentations.py  backbones.py  datasets.py  losses.py  models.py  optimizers.py  schedulers.py  utils.py
bioencoder/scripts/: __init__.py  archive.py  configure.py  inference.py  interactive_plots.py  learning_rate_finder.py  lr_finder.py  model_explorer.py  model_explorer_wrapper.py  split_dataset.py  swa.py  train.py
bioencoder/vis/: __init__.py  classes.py  helpers.py  methods.py  methods_backup.py
bioencoder_configs/: README.md  explore_stage1.yml  inference.yml  lr_finder.yml  plot_stage1.yml  train_stage2.yml
biosupcon/: augmentations.py  augmentations_alt.py  backbones.py  datasets.py  losses.py  models.py  utils.py
biosupcon/vis/: classes.py  helpers.py  methods.py
config-templates/: .inference.yml.kate-swp  explore_stage1.yml  explore_stage2.yml  inference.yml  lr_finder.yml  plot_stage1.yml  swa_stage1.yml  swa_stage2.yml  train_stage1.yml  train_stage2.yml
configs/plot/: plot_effnetb4_damselfly_stage1.yml
configs/train/: example.yml  example_augmentations.yml  lr_finder_effnetb4_damselfly_stage2.yml  lr_finder_effnetb4_damselfly_stage2_scArcFace.yml  swa_effnetb4_damselfly_stage1.yml  swa_effnetb4_damselfly_stage2.yml  swa_effnetb4_damselfly_stage2_scArcFace.yml  train_effnetb4_damselfly_stage1.yml  train_effnetb4_damselfly_stage2.yml  (+1 more)
help/: 01-detailed-readme.md  01-installation.md  02-data-preparation.md  03-training.md  04-analysis.md  05-options.md  README.md
tools/: augmentations_alt.py  datasets.py  utils.py
(+15 files in other folders)
