[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bioencoder"
authors = [
    {name = "Arthur Porto", email = "agporto@gmail.com"},
	{name = "Moritz Lürig", email = "moritz.luerig@gmail.com"},
	]
description = "A tool for imageomics"
readme = "README.md"
requires-python = "==3.9.*"
keywords = ["metric learning", "biology"]
dynamic = ["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/agporto/BioEncoder"
"Bug Tracker" = "https://github.com/agporto/BioEncoder/issues"

[project.scripts]
bioencoder_configure = "bioencoder.scripts.configure:cli"
bioencoder_split_dataset = "bioencoder.scripts.split_dataset:cli"
bioencoder_train = "bioencoder.scripts.train:cli"
bioencoder_swa = "bioencoder.scripts.swa:cli"
bioencoder_lr_finder = "bioencoder.scripts.lr_finder:cli"
bioencoder_interactive_plots = "bioencoder.scripts.interactive_plots:cli"
bioencoder_model_explorer = "bioencoder.scripts.model_explorer_wrapper:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "bioencoder.__version__"}
